get_dsp/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: curl-trigger
spec:
  selector:
    app: curl-trigger
  ports:
    - port: 80
      targetPort: 3000
