get_dsp/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curl-trigger-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: trigger-job.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curl-trigger
                port:
                  number: 80
